syntax = "proto3";
package cosmos.counter.v1;

option go_package = "github.com/cosmos/cosmos-sdk/x/counter/types";

// Query defines the gRPC querier service.
service Query {
  // Params queries the parameters of x/Mock module.
  rpc GetCount(QueryCountRequest) returns (QueryCountResponse);
}

// QueryParamsRequest defines the request type for querying x/mock count.
message QueryCountRequest {}

// QueryCountResponse defines the response type for querying x/mock count.
message QueryCountResponse {
  int64 total_count = 1;
}
